--- a/src/app/tests/suites/certification/Test_TC_G_2_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_G_2_1.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
-name: 120.2.1. [TC-GR-2.1] Groups Cluster Attributes [DUT-Server]
+name: 119.2.1. [TC-G-2.1] Attributes [DUT-Server]
 
 config:
     nodeId: 0x12344321
@@ -22,6 +22,7 @@ config:
 
 tests:
     - label: "TH reads NameSupport attribute from DUT"
+      PICS: G.S.A0000
       verification: |
           ./chip-tool groups read name-support 1 0
 
