--- a/src/app/tests/suites/certification/Test_TC_G_3_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_G_3_2.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
-name: 120.3.2. [TC-GR-3.2] Groups Cluster Commands [DUT-Client]
+name: 119.3.2. [TC-G-3.2] Commands [DUT-Client]
 
 config:
     nodeId: 0x12344321
@@ -22,6 +22,7 @@ config:
 
 tests:
     - label: "DUT sends AddGroup command to TH"
+      PICS: G.C.C00.Rsp
       verification: |
           ./chip-tool groups add-group 0x0021 gp1 1 0
 
@@ -60,6 +61,7 @@ tests:
       disabled: true
 
     - label: "DUT sends ViewGroup command to TH"
+      PICS: G.C.C01.Rsp
       verification: |
           ./chip-tool groups view-group 0x0021 1 0
 
@@ -98,12 +100,46 @@ tests:
       disabled: true
 
     - label: "DUT sends GetGroupMembership command to TH"
+      PICS: G.C.C02.Rsp
       verification: |
-          ./chip-tool groups get-group-membership 0x23 1 0
-          [1651226161.642052][3143:3143] CHIP:TOO: Error while encoding GroupList as an array.
+          ./chip-tool groups get-group-membership '[33]' 1 0
+
+          [1653077452169] [4058:5758073] CHIP: [DMG] ICR moving to [ResponseRe]
+          [1653077452169] [4058:5758073] CHIP: [DMG] InvokeResponseMessage =
+          [1653077452169] [4058:5758073] CHIP: [DMG] {
+          [1653077452169] [4058:5758073] CHIP: [DMG]         suppressResponse = false, 
+          [1653077452169] [4058:5758073] CHIP: [DMG]         InvokeResponseIBs =
+          [1653077452169] [4058:5758073] CHIP: [DMG]         [
+          [1653077452169] [4058:5758073] CHIP: [DMG]                 InvokeResponseIB =
+          [1653077452169] [4058:5758073] CHIP: [DMG]                 {
+          [1653077452169] [4058:5758073] CHIP: [DMG]                         CommandDataIB =
+          [1653077452169] [4058:5758073] CHIP: [DMG]                         {
+          [1653077452169] [4058:5758073] CHIP: [DMG]                                 CommandPathIB =
+          [1653077452169] [4058:5758073] CHIP: [DMG]                                 {
+          [1653077452169] [4058:5758073] CHIP: [DMG]                                         EndpointId = 0x0,
+          [1653077452169] [4058:5758073] CHIP: [DMG]                                         ClusterId = 0x4,
+          [1653077452169] [4058:5758073] CHIP: [DMG]                                         CommandId = 0x2,
+          [1653077452169] [4058:5758073] CHIP: [DMG]                                 },
+          [1653077452169] [4058:5758073] CHIP: [DMG]                                 
+          [1653077452169] [4058:5758073] CHIP: [DMG]                                 CommandData = 
+          [1653077452169] [4058:5758073] CHIP: [DMG]                                 {
+          [1653077452169] [4058:5758073] CHIP: [DMG]                                         0x0 = NULL
+          [1653077452169] [4058:5758073] CHIP: [DMG]                                         0x1 = [
+          [1653077452169] [4058:5758073] CHIP: [DMG]                                                 33, 
+          [1653077452169] [4058:5758073] CHIP: [DMG]                                         ],
+          [1653077452169] [4058:5758073] CHIP: [DMG]                                 },
+          [1653077452169] [4058:5758073] CHIP: [DMG]                         },
+          [1653077452169] [4058:5758073] CHIP: [DMG]                         
+          [1653077452169] [4058:5758073] CHIP: [DMG]                 },
+          [1653077452169] [4058:5758073] CHIP: [DMG]                 
+          [1653077452169] [4058:5758073] CHIP: [DMG]         ],
+          [1653077452169] [4058:5758073] CHIP: [DMG]         
+          [1653077452169] [4058:5758073] CHIP: [DMG]         InteractionModelRevision = 1
+          [1653077452169] [4058:5758073] CHIP: [DMG] },
       disabled: true
 
     - label: "DUT sends RemoveGroup command to TH"
+      PICS: G.C.C03.Rsp
       verification: |
           ./chip-tool groups remove-group 0x0021 1 0
 
@@ -141,6 +177,7 @@ tests:
       disabled: true
 
     - label: "DUT sends RemoveAllGroup command to TH"
+      PICS: G.C.C04.Rsp
       verification: |
           ./chip-tool groups  remove-all-groups 1 0
 
@@ -178,6 +215,7 @@ tests:
       disabled: true
 
     - label: "DUT sends AddGroupIfIdentifying command to TH"
+      PICS: G.C.C05.Rsp
       verification: |
           ./chip-tool groups  add-group-if-identifying 0x0052 gp54 1 0
 
