--- a/src/credentials/BUILD.gn
+++ b/src/credentials/BUILD.gn
@@ -47,15 +47,20 @@ static_library("credentials") {
     "attestation_verifier/DeviceAttestationDelegate.h",
     "attestation_verifier/DeviceAttestationVerifier.cpp",
     "attestation_verifier/DeviceAttestationVerifier.h",
-    "examples/DeviceAttestationCredsExample.cpp",
-    "examples/DeviceAttestationCredsExample.h",
-    "examples/ExampleDACs.cpp",
-    "examples/ExampleDACs.h",
-    "examples/ExamplePAI.cpp",
-    "examples/ExamplePAI.h",
     "examples/LastKnownGoodTimeCertificateValidityPolicyExample.h",
     "examples/StrictCertificateValidityPolicyExample.h",
   ]
+
+  if(!chip_device_attestation_credentials) {
+    sources += [
+        "examples/DeviceAttestationCredsExample.cpp",
+        "examples/DeviceAttestationCredsExample.h",
+        "examples/ExampleDACs.cpp",
+        "examples/ExampleDACs.h",
+        "examples/ExamplePAI.cpp",
+        "examples/ExamplePAI.h",
+    ]
+  }
 
   # TODO: These tests files should be removed after the DeviceAttestationCredsExample implementation
   # is changed to generate it's own credentials instead of using Test credentials.
