--- a/src/platform/EFR32/BUILD.gn
+++ b/src/platform/EFR32/BUILD.gn
@@ -59,9 +59,7 @@ static_library("EFR32") {
 
   if (chip_device_attestation_credentials) {
     defines = [ "DEVICE_ATTESTATION_CREDENTIALS=1" ]
-    sources += [
-      "DeviceAttestationCredsImpl.cpp",
-    ]
+    sources += [ "DeviceAttestationCredsImpl.cpp" ]
   }
 
   if (chip_enable_ota_requestor) {
