--- a/src/app/server/BUILD.gn
+++ b/src/app/server/BUILD.gn
@@ -38,6 +38,8 @@ static_library("server") {
     "Dnssd.h",
     "EchoHandler.cpp",
     "EchoHandler.h",
+    "FailSafeContext.cpp",
+    "FailSafeContext.h",
     "OnboardingCodesUtil.cpp",
     "OnboardingCodesUtil.h",
     "Server.cpp",
