--- a/src/app/tests/suites/certification/Test_TC_FLW_2_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_FLW_2_1.yaml
@@ -34,6 +34,8 @@ tests:
       response:
           constraints:
               type: uint16
+              minValue: 0
+              maxValue: 65535
 
     - label: "Read the mandatory attribute: MinMeasuredValue"
       command: "readAttribute"
@@ -41,6 +43,8 @@ tests:
       response:
           constraints:
               type: uint16
+              minValue: 0
+              maxValue: 65535
 
     - label: "Read the mandatory attribute: MaxMeasuredValue"
       command: "readAttribute"
@@ -48,6 +52,8 @@ tests:
       response:
           constraints:
               type: uint16
+              minValue: 0
+              maxValue: 65535
 
     - label: "read the optional attribute: Tolerance"
       optional: true
