Unit test fixes
remove init from lwip

Disable TestInetLayer.cpp for cmsis-rtos

Add TestKeyValueStoreMgr.cpp to cmsis-rtos

Fix CheckToIPv6 using uninitialised memory

Fix missing assert header include

Add network initialisation to unit tests

Add missing chip init to a test using post event

Schedule RunEventLoop to be terminated after handling events

Fix test missing chip init

Fix duplicate id in option sets in ParseArgs unit tests

Fix double platform shutdown in tests

Fix tests to DrainAndServiceIO until completion

The tests were unreliable due to leaving unprocessed events based on timing. If processing is slow the events would arrive too late and remain on the queue. Some tests had workaround for this. Now the events are handled repeatedly until no new events are generated.

Increase the drive IO timeout in tests  to accommodate slow machines

remove unused header

--- a/src/inet/tests/BUILD.gn
+++ b/src/inet/tests/BUILD.gn
@@ -41,7 +41,7 @@ static_library("helpers") {
     "TestSetupSignallingPosix.cpp",
   ]
 
-  if (current_os != "mbed") {
+  if (current_os != "mbed" && current_os != "cmsis-rtos") {
     sources += [ "TestInetLayer.cpp" ]
   }
 
