[nrfconnect] preparation for wifi integration.
Signed-off-by: Marcin Kajor <marcin.kajor@nordicsemi.no>

--- a/src/platform/nrfconnect/BUILD.gn
+++ b/src/platform/nrfconnect/BUILD.gn
@@ -75,6 +75,20 @@ static_library("nrfconnect") {
     }
   }
 
+  if (chip_enable_wifi) {
+    sources += [
+      "../Zephyr/WiFiManager.h",
+      "wifi/ConnectivityManagerImplWiFi.cpp",
+      "wifi/ConnectivityManagerImplWiFi.h",
+      "wifi/NrfWiFiDriver.cpp",
+      "wifi/NrfWiFiDriver.h",
+    ]
+    if (chip_mdns == "platform") {
+      sources += [ "../Zephyr/DnssdImpl.cpp" ]
+      deps = [ "${chip_root}/src/lib/dnssd:platform_header" ]
+    }
+  }
+
   if (chip_enable_nfc) {
     sources += [
       "../Zephyr/NFCManagerImpl.cpp",
