--- a/src/controller/python/BUILD.gn
+++ b/src/controller/python/BUILD.gn
@@ -30,6 +30,8 @@ config("controller_wno_deprecate") {
   cflags = [ "-Wno-deprecated-declarations" ]
 }
 
+chip_python_version = "0.0"
+
 shared_library("ChipDeviceCtrl") {
   if (chip_controller) {
     output_name = "_ChipDeviceCtrl"
@@ -111,10 +113,71 @@ shared_library("ChipDeviceCtrl") {
   configs += [ ":controller_wno_deprecate" ]
 }
 
-pw_python_action("chip-library") {
-  script = "build-chip-wheel.py"
+template("chip_python_wheel_action") {
+  _dist_dir = "${root_out_dir}/controller/python"
 
-  _py_manifest_files = [
+  _py_manifest_file = "${target_gen_dir}/${target_name}.py_manifest.json"
+
+  pw_python_action(target_name) {
+    script = "build-chip-wheel.py"
+    forward_variables_from(invoker, "*")
+
+    _py_manifest_files_rebased = []
+    foreach(_manifest_entry, py_manifest_files) {
+      inputs += _manifest_entry.sources
+      _py_manifest_files_rebased += [
+        {
+          src_dir = rebase_path(_manifest_entry.src_dir,
+                                get_path_info(_py_manifest_file, "dir"))
+          sources = rebase_path(_manifest_entry.sources, _manifest_entry.src_dir)
+        },
+      ]
+    }
+
+    if (defined(invoker.py_scripts)) {
+      _py_scripts = invoker.py_scripts
+    } else {
+      _py_scripts = [ ]
+    }
+
+    _py_manifest = {
+      files = _py_manifest_files_rebased
+      packages = py_packages
+      scripts = _py_scripts
+      package_reqs = py_package_reqs
+    }
+
+    write_file(_py_manifest_file, _py_manifest, "json")
+
+    args = [
+      "--package_name",
+      py_package_name,
+      "--build_number",
+      chip_python_version,
+      "--build_dir",
+      rebase_path("${target_gen_dir}/${target_name}.py_build", root_build_dir),
+      "--dist_dir",
+      rebase_path(_dist_dir, root_build_dir),
+      "--manifest",
+      rebase_path(_py_manifest_file, root_build_dir),
+      "--plat-name",
+      py_platform_tag,
+    ]
+
+    if (defined(invoker.lib_name)) {
+      args += [
+        "--lib-name",
+        lib_name,
+      ]
+    }
+
+    outputs = [ "${_dist_dir}/$output_name" ]
+  }
+}
+
+chip_python_wheel_action("chip-library") {
+
+  py_manifest_files = [
     {
       src_dir = "."
       sources = [
@@ -189,22 +252,9 @@ pw_python_action("chip-library") {
     },
   ]
 
-  _py_manifest_file = "${target_gen_dir}/${target_name}.py_manifest.json"
-
   inputs = []
-  _py_manifest_files_rebased = []
-  foreach(_manifest_entry, _py_manifest_files) {
-    inputs += _manifest_entry.sources
-    _py_manifest_files_rebased += [
-      {
-        src_dir = rebase_path(_manifest_entry.src_dir,
-                              get_path_info(_py_manifest_file, "dir"))
-        sources = rebase_path(_manifest_entry.sources, _manifest_entry.src_dir)
-      },
-    ]
-  }
 
-  _py_packages = [
+  py_packages = [
     "chip",
     "chip.ble",
     "chip.ble.commissioning",
@@ -223,12 +273,12 @@ pw_python_action("chip-library") {
   ]
 
   if (!chip_controller) {
-    _py_packages += [
+    py_packages += [
       "chip.server",
     ]
   }
 
-  _py_package_reqs = [
+  py_package_reqs = [
     "coloredlogs",
     "construct",
     "dacite",
@@ -239,21 +289,10 @@ pw_python_action("chip-library") {
   ]
 
   if (current_os == "mac") {
-    _py_package_reqs += [ "pyobjc-framework-corebluetooth" ]
+    py_package_reqs += [ "pyobjc-framework-corebluetooth" ]
   } else if (current_os == "linux") {
-    _py_package_reqs += [ "dbus-python", "pygobject" ]
+    py_package_reqs += [ "dbus-python", "pygobject" ]
   }
-
-  _py_manifest = {
-    files = _py_manifest_files_rebased
-    packages = _py_packages
-    scripts = [ ]
-    package_reqs = _py_package_reqs
-  }
-
-  write_file(_py_manifest_file, _py_manifest, "json")
-
-  _dist_dir = "${root_out_dir}/controller/python"
 
   if (current_cpu == "x64") {
     cpu_tag = "x86_64"
@@ -266,14 +305,14 @@ pw_python_action("chip-library") {
   }
 
   if (current_os == "mac") {
-    platform_tag = "macosx_" + string_replace(mac_deployment_target, ".", "_")
+    py_platform_tag = "macosx_" + string_replace(mac_deployment_target, ".", "_")
   } else {
-    platform_tag = current_os
+    py_platform_tag = current_os
   }
 
-  platform_tag = platform_tag + "_" + cpu_tag
+  py_platform_tag = py_platform_tag + "_" + cpu_tag
 
-  tags = "cp37-abi3-" + platform_tag
+  tags = "cp37-abi3-" + py_platform_tag
 
   if (chip_controller) {
     lib_name = "_ChipDeviceCtrl.so"
@@ -281,44 +320,26 @@ pw_python_action("chip-library") {
     lib_name = "_ChipServer.so"
   }
 
-  args = [
-    "--package_name",
-    "chip-library",
-    "--build_number",
-    "0.0",
-    "--build_dir",
-    rebase_path("${target_gen_dir}/${target_name}.py_build", root_build_dir),
-    "--dist_dir",
-    rebase_path(_dist_dir, root_build_dir),
-    "--manifest",
-    rebase_path(_py_manifest_file, root_build_dir),
-    "--plat-name",
-    platform_tag,
-    "--lib-name",
-    lib_name,
-  ]
+  py_package_name = "chip-library"
 
   public_deps = [ ":ChipDeviceCtrl" ]
 
-  output_name = "chip-library-0.0-${tags}.whl"
-  outputs = [ "${_dist_dir}/$output_name" ]
+  output_name = "chip_library-${chip_python_version}-${tags}.whl"
 }
 
-pw_python_action("chip-repl") {
-  script = "build-chip-wheel.py"
-
-  _py_scripts = [
+chip_python_wheel_action("chip-repl") {
+  py_scripts = [
     "chip-device-ctrl.py",
     "chip-repl.py",
   ]
 
-  _py_manifest_files = [
+  py_manifest_files = [
     {
       src_dir = "."
       sources = [
         "chip/ChipReplStartup.py",
       ]
-      sources += _py_scripts
+      sources += py_scripts
     },
     {
       src_dir = "//"
@@ -326,22 +347,11 @@ pw_python_action("chip-repl") {
     },
   ]
 
-  _py_manifest_file = "${target_gen_dir}/${target_name}.py_manifest.json"
-
   inputs = []
-  _py_manifest_files_rebased = []
-  foreach(_manifest_entry, _py_manifest_files) {
-    inputs += _manifest_entry.sources
-    _py_manifest_files_rebased += [
-      {
-        src_dir = rebase_path(_manifest_entry.src_dir,
-                              get_path_info(_py_manifest_file, "dir"))
-        sources = rebase_path(_manifest_entry.sources, _manifest_entry.src_dir)
-      },
-    ]
-  }
 
-  _py_package_reqs = [
+  py_packages = [ "chip" ]
+
+  py_package_reqs = [
     "coloredlogs",
 
     #
@@ -356,32 +366,8 @@ pw_python_action("chip-repl") {
     "ipykernel",
   ]
 
-  _py_manifest = {
-    files = _py_manifest_files_rebased
-    packages = [ "chip" ]
-    scripts = _py_scripts
-    package_reqs = _py_package_reqs
-  }
+  py_package_name = "chip-repl"
+  py_platform_tag = "any"
 
-  write_file(_py_manifest_file, _py_manifest, "json")
-
-  _dist_dir = "${root_out_dir}/controller/python"
-
-  args = [
-    "--package_name",
-    "chip-repl",
-    "--build_number",
-    "0.0",
-    "--build_dir",
-    rebase_path("${target_gen_dir}/${target_name}.py_build", root_build_dir),
-    "--dist_dir",
-    rebase_path(_dist_dir, root_build_dir),
-    "--manifest",
-    rebase_path(_py_manifest_file, root_build_dir),
-    "--plat-name",
-    "any",
-  ]
-
-  output_name = "chip-repl-0.0-py3-any.whl"
-  outputs = [ "${_dist_dir}/$output_name" ]
+  output_name = "chip_repl-${chip_python_version}-py3-any.whl"
 }
