--- a/src/crypto/crypto.gni
+++ b/src/crypto/crypto.gni
@@ -25,7 +25,7 @@ declare_args() {
 if (chip_crypto == "") {
   if (current_os == "android" || current_os == "freertos" ||
       current_os == "zephyr" || current_os == "mbed" || 
-      current_os == "webos" || chip_device_platform == "openiotsdk") {
+      current_os == "webos" || current_os == "cmsis-rtos") {
     chip_crypto = "mbedtls"
   } else {
     chip_crypto = "openssl"
