Add NDEBUG compile definition
NDEBUG is set for non-debug build and can be used in application sources

Signed-off-by: ATmobica <artur.tynecki@mobica.com>

--- a/config/openiotsdk/CMakeLists.txt
+++ b/config/openiotsdk/CMakeLists.txt
@@ -270,6 +270,12 @@ list(APPEND CHIP_INCLUDES
     ${CHIP_ROOT}/config/openiotsdk/mbedtls
 )
 
+if (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+    list(APPEND CHIP_DEFINES
+        NDEBUG
+    )
+endif()
+
 target_include_directories(${APP_TARGET} PRIVATE
                            ${CHIP_INCLUDES}
 )
