FIX TSTST-2.2 script
Aligned the thermostat PICS in ci-pics-values with the feature map in all-clusters-app.zap
HEAT | COOL | AUTO
Updated the Test-TC-TSTAT_2_2.yaml to properly deal with AUTO MODE
Validated all steps pass with HEAT, COOL, HEAT&COOL and those permutations along with OCC and AUTO.

Addresses Test Plan issues 1379 and 1456

--- a/src/app/tests/suites/certification/PICS.yaml
+++ b/src/app/tests/suites/certification/PICS.yaml
@@ -360,12 +360,18 @@ PICS:
       id: A_EFFECTIVECONTROLMODE
 
       # Thermostat cluster
-    - label: "Does the device implement the OccupiedCoolingSetpoint attribute"
-      id: A_OCCUPIEDCOOLINGSETPOINT
+    - label: "Does the device implement the Heating feature"
+      id: TSTAT.S.F00
 
-    - label: "Does the device implement the OccupiedHeatingSetpoint attribute"
-      id: A_OCCUPIEDHEATINGSETPOINT
+    - label: "Does the device implement the Cooling feature"
+      id: TSTAT.S.F01
 
+    - label: "Does the device implement the Occupancy feature"
+      id: TSTAT.S.F02
+
+    - label: "Does the device implement the Auto feature"
+      id: TSTAT.S.F05
+    
     - label: "Does the device implement the MinHeatSetpointLimit attribute"
       id: A_MINHEATSETPOINTLIMIT
 
@@ -377,46 +383,6 @@ PICS:
 
     - label: "Does the device implement the MaxCoolSetpointLimit attribute"
       id: A_MAXCOOLSETPOINTLIMIT
-
-    - label:
-          "Does the device implement the ControlSequenceOfOperation attribute"
-      id: A_CONTROLSEQUENCEOFOPERATION
-
-    - label:
-          "Does the device implement receiving the SetpointRaiseLower command?"
-      id: CR_SetpointRaiseLower
-
-    - label:
-          "Does the device implement the UnoccupiedCoolingSetpoint attribute?"
-      id: A_UNOCCUPIEDCOOLINGSETPOINT
-
-    - label:
-          "Does the device implement the UnoccupiedHeatingSetpoint attribute?"
-      id: A_UNOCCUPIEDHEATINGSETPOINT
-
-    - label: "Does the device implement the MinSetpointDeadBand attribute?"
-      id: A_MINSETPOINTDEADBAND
-
-    - label: "Does the device implement the Tolerance attribute?"
-      id: A_TEMPERATURE_TOLERANCE
-
-    - label: "Thermostat is capable of managing a heating device"
-      id: TSTAT_HEAT
-
-    - label: "Thermostat is capable of managing a cooling device"
-      id: TSTAT_COOL
-
-    - label: "Supports Occupied and Unoccupied setpoints"
-      id: TSTAT_OCC
-
-    - label: "Supports a weekly schedule of setpoint transitions"
-      id: TSTAT_SCH
-
-    - label: "Supports configurable setback (or span)"
-      id: TSTAT_SB
-
-    - label: "Supports a System Mode of Auto"
-      id: TSTAT_AUTO
 
       # Occupency sensing cluster
     - label: "Does the device implement the Occupancy attribute?"
