--- a/.github/workflows/examples-linux-arm.yaml
+++ b/.github/workflows/examples-linux-arm.yaml
@@ -69,26 +69,30 @@ jobs:
               run: |
                   ./scripts/run_in_build_env.sh \
                      "./scripts/build/build_examples.py \
-                        --target linux-arm64-all-clusters \
-                        --target linux-arm64-chip-tool-no-interactive-ipv6only \
-                        --target linux-arm64-lock \
-                        --target linux-arm64-minmdns \
-                        --target linux-arm64-thermostat-no-ble \
+                        #--target linux-arm64-all-clusters \
+                        #--target linux-arm64-chip-tool-no-interactive-ipv6only \
+                        --target linux-arm64-chip-tool \
+                        --target linux-arm64-lighting-app \
+                        #--target linux-arm64-lock \
+                        #--target linux-arm64-minmdns \
+                        #--target linux-arm64-thermostat-no-ble \
                         build \
                      "
             - name: Bloat report - chip-tool
               timeout-minutes: 5
               run: |
                   .environment/pigweed-venv/bin/python3 scripts/tools/memory/gh_sizes.py \
-                    linux arm64 chip-tool-no-interactive-ipv6only \
-                    out/linux-arm64-chip-tool-no-interactive-ipv6only/chip-tool \
+                    #linux arm64 chip-tool-no-interactive-ipv6only \
+                    #out/linux-arm64-chip-tool-no-interactive-ipv6only/chip-tool \
+                    linux arm64 chip-tool \
+                    out/linux-arm64-chip-tool/chip-tool \
                     /tmp/bloat_reports/
             - name: Bloat report - thermostat
               timeout-minutes: 5
               run: |
                   .environment/pigweed-venv/bin/python3 scripts/tools/memory/gh_sizes.py \
-                    linux arm64 thermostat-no-ble \
-                    out/linux-arm64-thermostat-no-ble/thermostat-app \
+                    linux arm64 lighting-app \
+                    out/linux-arm64-lighting-app/lighting-app \
                     /tmp/bloat_reports/
             - name: Uploading Size Reports
               uses: actions/upload-artifact@v2
@@ -97,3 +101,14 @@ jobs:
                   name: Size,Linux-Examples,${{ env.GH_EVENT_PR }},${{ env.GH_EVENT_HASH }},${{ env.GH_EVENT_PARENT }},${{ github.event_name }}
                   path: |
                       /tmp/bloat_reports/
+            - name: upload-light
+              uses: actions/upload-artifact@master
+              with:
+                    name: lighting-app
+                    #path: ${{ github.workspace }}/out/linux-arm64-lighting-app/lighting-app
+                    path: out/linux-arm64-lighting-app/lighting-app
+            - name: upload-tool
+              uses: actions/upload-artifact@master
+              with:
+                    name: chip-tool
+                    path: out/linux-arm64-chip-tool/chip-tool
