add enum check for clusters
run codegen

--- a/src/app/tests/suites/TestCluster.yaml
+++ b/src/app/tests/suites/TestCluster.yaml
@@ -1038,13 +1038,24 @@ tests:
               - name: "arg1"
                 value: 20003
               - name: "arg2"
-                value: 101
+                value: 1
       response:
           values:
               - name: "arg1"
                 value: 20003
               - name: "arg2"
-                value: 101
+                value: 1
+
+    - label: "Send a command with a vendor_id and invalid enum"
+      command: "testEnumsRequest"
+      arguments:
+        values:
+          - name: "arg1"
+            value: 20003
+          - name: "arg2"
+            value: 101
+      response:
+        error: INVALID_COMMAND
 
     # Tests for Struct
 
