--- a/src/app/tests/suites/certification/Test_TC_WNCV_4_5.yaml
+++ b/src/app/tests/suites/certification/Test_TC_WNCV_4_5.yaml
@@ -133,10 +133,18 @@ tests:
               notValue: 0
 
     ### DUT TurnOff
-    - label: "3c: reboot/restart the DUT"
-      cluster: "SystemCommands"
-      endpoint: 0
-      command: "Reboot"
+    - label: "Reboot target device(DUT)"
+      verification: |
+          Not implemented in chip-tool
+      cluster: "LogCommands"
+      command: "UserPrompt"
+      PICS: PICS_USER_PROMPT
+      arguments:
+          values:
+              - name: "message"
+                value: "Please reboot the DUT and enter 'y' after DUT starts"
+              - name: "expectedValue"
+                value: "y"
 
     ### DUT GoesOff
     - label: "3d: Wait for the commissioned device to be retrieved"
